# renderdoc-mcp

./: .coverage  .gitignore  CLAUDE.md  MCP_SETUP.md  README.md  pyproject.toml  test_mcp_config.py  test_shader.frag
.claude/: settings.local.json
.github/: DIRECT_RDC_ANALYSIS.md  PROJECT_TRACKER.md
docs/: 2025-01-30-ai-performance-analysis.md
docs/plans/: 2025-01-30-renderdoc-mcp-server.md  2025-01-31-performance-check-expansion-implementation.md  2025-01-31-performance-check-expansion.md  malioc-integration-implementation-plan.md
rd_mcp/: MCP_CONFIG.json  MCP_CONFIG.md  PRESETS.md  README.md  __init__.py  __main__.py  analyzer.py  config.json  config.py  html_parser.py  models.py  rdc_analyzer.py  rdc_analyzer_cmd.py  report_generator.py  requirements.txt  server.py
rd_mcp/detectors/: __init__.py  base.py  drawcall.py  resource.py  shader.py
rd_mcp/detectors/geometry/: __init__.py  model_stats.py  triangle_count.py
rd_mcp/detectors/passes/: __init__.py  duration.py  switches.py
rd_mcp/detectors/shader/: __init__.py  mali_complexity.py  malioc_runner.py  shader_detector.py  shader_extractor.py
rd_mcp/presets/: mobile-aggressive.json  mobile-balanced.json  pc-balanced.json
rd_mcp/tests/: test_analyzer.py  test_analyzer_integration.py  test_base_detector.py  test_config.py  test_drawcall_detector.py  test_full_analysis.py  test_html_parser.py  test_integration.py  test_models.py  test_rdc_analyzer.py  test_report_format.py  test_resource_detector.py  test_server.py  test_shader_detector.py
rd_mcp/tests/detectors/: test_geometry_detectors.py  test_pass_detectors.py
rd_mcp/tests/detectors/shader/: __init__.py  test_mali_complexity.py  test_malioc_runner.py
rd_mcp/tests/fixtures/: README.md
rd_mcp/tests/integration/: __init__.py  test_real_rdc.py
